<resources>
    <string name="app_name">쩝쩝박사</string>
    <string name="app_name_kr">쩝쩝박사</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal"><u>탈퇴하기</u></string>
    <string name="base_withdrawal">탈퇴하기</string>
    <string name="complete_withdrawal"><u>탈퇴 완료</u></string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="auto_login">자동로그인</string>
    <string name="social_login">소셜 로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="complete_find_password">비밀번호 찾기 완료</string>
    <string name="success_change_password">비밀번호 변경 완료</string>
    <string name="retry_password">재설정된 비밀번호로 다시 로그인해 주세요.</string>
    <string name="underline_sign_up"><u>회원가입</u></string>
    <string name="underline_find_id"><u>아이디 찾기</u></string>
    <string name="underline_find_password"><u>비밀번호 찾기</u></string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="social_login_app_bar_title">소셜 로그인</string>
    <string name="social_login_title">소셜 계정으로 로그인</string>
    <string name="google_login">구글 로그인</string>
    <string name="naver_login">네이버 로그인</string>
    <string name="close">닫기</string>
    <string name="register">등록하기</string>
    <string name="progress_text">잠시만 기다려주세요.</string>
    <string name="non_exist_user">가입되지 않은 정보입니다.</string>
    <string name="do_register">가입하기</string>
    <string name="back_finish">\'뒤로\'버튼 한번 더 누르시면 종료됩니다.</string>
    <string name="terms_agreement">약관 동의</string>
    <string name="privacy_term_title">개인정보 이용약관(필수)</string>
    <string name="privacy_policy">개인정보 이용방침</string>
    <string name="privacy_term_text">제1조(목적)\n쩝쩝박사 서비스 이용약관은 bcsd lab에서 서비스를 제공함에 있어, 이용자간의 관리, 의무 및 책임 사항 등을 목적으로 합니다.</string>
    <string name="jjbaksa_term_title">쩝쩝박사 이용약관(필수)</string>
    <string name="jjbaksa_term_text"> 쩝쩝박사 서비스 이용약관은 bcsd lab에서 서비스를 제공함에 있어, 이용자간의 관리, 의무 및 책임 사항 등을 목적으로 합니다.\n본 약관(이하 ‘본 약관’이라 함)은 쩝쩝박사 어플리케이션과 모바일 및 PC 포함 이와 관련된 웹사이트들(이하 ‘쩝쩝박사’라 함)을 통하여 제공되는 모든 제품 및 서비스(이하 ‘본 서비스’라 함)와 관련하여 본 약관에 따라 당사와 이용계약을 체결하고 본 서비스를 이용하는 고객(이하 ‘회원’이라 함)과 당사 간의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다. 당사에 회원가입을 하지 않고 단순 열람을 원하는 경우, 비회원 이용자를 위한 이용정책이 적용됩니다.</string>
    <string name="terms_agree_all">전체동의</string>
    <string name="withdrawal_jjbaksa_title">님,\n쩝쩝박사 학위를 포기하시겠어요...?</string>
    <string name="why_reason_delete_account">계정을 삭제하시려는 이유가 궁금해요.</string>
    <string name="privacy_opinion_for_jjbaksa">쩝쩝박사에서 개선되면 좋을 점이나\n불편하셨던 점을 말씀해주세요!</string>
    <string name="improve_jjbaksa_content">적극 반영하여 개선하도록 하겠습니다.\n쩝쩝박사의 문은 언제든 열려있으니 다시 찾아와 주세요!</string>
    <string name="withdrawal_notice_text"><u>유의사항</u>\n&#183; 작성한 리뷰, 북마크, 프로필 등 모든 정보가 삭제 됩니다.\n&#183; 추후 같은 계정으로 재가입해도 작성한 내역은 복구되지 않아요.</string>
    <string name="free_write">자유롭게 작성해주세요 :)</string>
    <string name="new_password">새 비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="success_find_account">아이디 찾기 완료</string>
    <string name="success_find_password">비밀번호 찾기 완료</string>
    <string name="input_email_when_find_id_text">아이디를 찾을 때\n사용할 이메일을 입력해 주세요.</string>
    <string name="input_account_and_email_when_find_password">비밀번호를 찾을 때 사용할\n아이디와 이메일을 입력해 주세요.</string>
    <string name="re_login_with_new_password">재설정된 비밀번호로 다시 로그인 해주세요.</string>
    <string name="input_account">아이디를 입력해 주세요.</string>
    <string name="input_email">이메일을 입력해 주세요.</string>
    <string name="short_input_email">이메일 입력</string>
    <string name="input_password">비밀번호를 입력하세요.</string>
    <string name="check_new_password">새 비밀번호 확인</string>
    <string name="input_new_password">새 비밀번호를 입력하세요.</string>
    <string name="set_new_password">새 비밀번호를 설정해 주세요.</string>
    <string name="not_match_new_password">새 비밀번호가 일치하지 않습니다.</string>
    <string name="send_to_verification_number">인증번호 보내기</string>
    <string name="verification_completed">인증 완료</string>
    <string name="input_verification_code_from_email">이메일로 발송된\n인증번호를 입력해 주세요.</string>
    <string name="input_email_and_verification_code_from_email">이메일과 이메일로 발송된\n인증번호를 입력해 주세요.</string>
    <string name="send_verification_code">인증번호 보내기</string>
    <string name="resend_verification_code">인증번호 재발송</string>
    <string name="resend_verification_code_content">인증번호를 재발송 했어요.</string>
    <string name="not_correct_email_format">이메일 형식이 올바르지 않습니다.</string>
    <string name="not_correct_password_format">비밀번호는 문자,숫자,특수문자를 포함한\n8~16자리로 이루어져야 합니다.</string>
    <string name="not_correct_password">비밀번호가 일치하지 않습니다.</string>
    <string name="not_exist_account">존재하지 않는 아이디입니다.</string>
    <string name="not_correct_email_format_and_not_exist_account">계정이 존재하지 않거나\n이메일 형식이 올바르지 않습니다.</string>
    <string name="not_correct_verification_code">인증번호가 올바르지 않습니다.</string>
    <string name="input_verification_code">인증번호 입력</string>
    <string name="id_checked">사용 가능한 아이디입니다.</string>
    <string name="id_already_exist">이미 존재하는 아이디입니다.</string>
    <string name="fail_id">아이디가 존재하지 않아요.</string>
    <string name="fail_email">올바르지 않은 이메일이에요.</string>
    <string name="incorrect_email_format">올바르지 않은 이메일 형식이에요.</string>
    <string name="email_not_found">존재하지 않는 도메인입니다.</string>
    <string name="password_rule_not_match">비밀번호는 문자, 숫자, 특수문자를 포함한 8~16자리로 이루어져야합니다.</string>
    <string name="password_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="need_id_check">아이디 중복확인을 해주세요.</string>
    <string name="sign_out_title_text">로그아웃을 진행하실건가요?</string>
    <string name="sign_out_content_text">쩝쩝박사 로그아웃을 진행하시면 로그인 페이지로 돌아갑니다.</string>
    <string name="sign_up_title_text">마지막 한 단계!</string>
    <string name="sign_up_content_text">입력하신 이메일로 링크를 보냈어요.\n이메일 인증을 완료해주세요.</string>
    <string name="welcome_text">회원가입을 축하합니다!\n당신을 어떻게 부르면 좋을까요?</string>
    <string name="complete_withdrawal_content">다음에 또 봐요! 재가입은 탈퇴 후 일주일 후 부터 가능합니다.</string>
    <string name="next">다음</string>
    <string name="save">저장</string>
    <string name="complete">완료</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="manage_account">계정 관리</string>
    <string name="title">제목</string>
    <string name="service">서비스</string>
    <string name="notice">공지사항</string>
    <string name="inquiry">문의하기</string>
    <string name="inquiry_content">문의 내용</string>
    <string-array name="inquiry_tab">
        <item>전체 문의 내역</item>
        <item>나의 문의 내역</item>
    </string-array>
    <string-array name="pin_tab">
        <item>내 리뷰</item>
        <item>친구 리뷰</item>
    </string-array>
    <string-array name="my_page_tab">
        <item>리뷰</item>
        <item>북마크</item>
    </string-array>
    <string name="write_review_title">오늘 먹은 음식의\n리뷰를 작성해보세요</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="my_review_empty_description">오늘 다녀오셨나요?\n리뷰를 한 번 작성해보아요!</string>
    <string name="friend_review_empty_description">작성한 리뷰가 없어요!</string>
    <string name="newest">최신순</string>
    <string name="by_star_rating">별점순</string>
    <string name="star_rating_description">음식에 대한 별점을 매겨주세요.</string>
    <string name="report">신고하기</string>
    <string name="review_report">리뷰 신고</string>
    <string name="go_to_inquiry">문의하러 가기</string>
    <string name="write_inquiry">문의 작성하기</string>
    <string name="setting_secret">비밀글 설정</string>
    <string name="app_version">앱 버전</string>
    <string name="id_check">중복확인</string>
    <string name="email">이메일</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="change_password_content">비밀번호 변경하기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="type_nickname">닉네임을 입력해주세요.</string>
    <string name="main_page_search_edit_text_hint">검색어를 입력해주세요.</string>
    <string name="menu_title_home">홈</string>
    <string name="menu_title_write">글쓰기</string>
    <string name="menu_title_my_page">마이페이지</string>
    <string name="floating_action_button_text_bookmark">북마크 음식점</string>
    <string name="floating_action_button_text_find_friend_store">친구 음식점 찾기</string>
    <string name="floating_action_button_text_find_near_store">가까운 음식점 찾기</string>
    <string name="recent_item_gallery">최근 항목</string>
    <string name="gallery_complete">완료</string>
    <string name="bookmark_restaurant">북마크 음식점</string>
    <string name="friend_restaurant">친구 음식점</string>
    <string name="nearby_restaurant">가까운 음식점</string>
    <string name="check_the_real_location">현 위치에서 검색</string>
    <string name="not_find_restaurant">음식점을 찾을 수 없습니다.</string>
    <string name="choose_restaurant_options">찾는 음식점 옵션을 선택해주세요.</string>
    <string name="move_setting">설정으로 이동</string>
    <string name="location_service_term_text">위치 서비스를 사용할 수 없습니다. 기기의 \'설정\'에서 위치 서비스를 켜주세요.(필수권한)</string>
    <string name="review">리뷰</string>
    <string name="do_review">리뷰하기</string>
    <string name="bookmark">북마크</string>
    <string name="friends_review">친구의 리뷰</string>
    <string name="my_review">내 리뷰</string>
    <string name="see_all">전체 보기</string>
    <string name="map">지도</string>
    <string name="default_information">기본 정보</string>
    <string name="report_wrong_information">틀린 정보 신고</string>
    <string name="no_review_title">등록된 리뷰가 없어요.</string>
    <string name="no_review_content">다녀온 음식점의 리뷰를 작성해 보세요!</string>
    <string name="no_review_yet">아직 등록된 리뷰가 없습니다.\n친구에게 추천해볼까요?</string>
    <string name="no_bookmark_title">등록된 북마크가 없어요.</string>
    <string name="no_bookmark_content" formatted="false">새로운 음식점을 저장해 보세요!</string>
    <string name="search">검색</string>
    <string name="search_main_title">오늘은 어떤음식이 땡기나요?</string>
    <string name="sharp">#</string>
    <string name="no_img">등록된 사진이 없어요!</string>
    <string name="open_now">영업중</string>
    <string name="open_not_now">영업종료</string>
    <string name="empty_review">리뷰없음</string>
    <string name="format_review">%d개의 리뷰</string>
    <string name="empty_search_shop_text">해당 검색어와 관련된\n음식점/게시물을 찾을 수 없습니다.</string>
    <string name="withdrawal_reason1">가게 정보가 부족해요</string>
    <string name="withdrawal_reason2">사용이 불편해요</string>
    <string name="withdrawal_reason3">다른 앱을 더 많이 사용해요</string>
    <string name="withdrawal_reason4">새 계정을 만들고 싶어요</string>
    <string name="withdrawal_reason5">그 외</string>
    <string name="register_inquiry_title">쩝쩝박사 이용 중에 생긴 불편한 점이나 문의사항을 등록해주세요.</string>
    <string name="register_inquiry_content">확인 후 순차적으로 답변 드리겠습니다.</string>
    <string name="empty_answer">아직 답변이 없네요. 조금만 기다려주세요!</string>
    <string name="secret_inquiry_content_visible">비밀글은 나의 문의 내역에서만 볼 수 있어요.</string>
    <string name="attachable_max_photo">최대 3장 첨부 가능</string>
    <string name="write_inquiry_content">문의 내용을 작성해주세요.</string>
    <string name="write_title">제목을 작성해주세요.</string>
    <string name="my_page_followers">• 팔로우 %1$d</string>
    <string name="my_page_account">\@%s</string>
    <string name="text_length">%s/10</string>
    <string name="text_length150">%s/150</string>
    <string name="text_length500">%s/500</string>
    <string name="change_profile_content">%s님,\n프로필을 변경하시겠어요?</string>
    <string name="last_register_date">마지막 일자 %s</string>
    <string name="total_review">총 %s개의 리뷰</string>
    <string name="last_review_date">마지막 리뷰 %s</string>
    <string name="schedule">%02d:%02d ~ %02d:%02d</string>
    <string name="id_format_not_match">올바른 형식의 아이디가 아닙니다.</string>
    <string name="following">팔로잉</string>
    <string name="follower">친구 목록</string>
    <string name="no_follower_title">등록된 친구가 없어요.</string>
    <string name="follow">팔로우</string>
    <string name="delete">삭제</string>
    <string name="accept">확인</string>
    <string name="requested">요청됨</string>
    <string name="recent_search">최근 검색</string>
    <string name="clear_all">전체삭제</string>
    <string name="email_already_exist">이미 회원가입된 이메일입니다.</string>
</resources>