<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jjbaksa.jjbaksa.view.JjAppbar
            android:id="@+id/jj_app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/change_password"
            app:titleSize="18sp"
            app:titleTextColor="@color/color_000000" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jj_app_bar_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.jjbaksa.jjbaksa.view.JjEditText
                    android:id="@+id/current_password_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="75dp"
                    app:has_title="true"
                    app:hint="@string/input_password"
                    app:hintColor="@color/color_c4c4c4"
                    app:hintSize="14sp"
                    app:is_password="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/current_password"
                    app:titleSize="16sp" />

                <com.jjbaksa.jjbaksa.view.JjEditText
                    android:id="@+id/new_password_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="39dp"
                    app:has_title="true"
                    app:hint="@string/input_new_password"
                    app:hintColor="@color/color_c4c4c4"
                    app:hintSize="14sp"
                    app:is_password="true"
                    app:layout_constraintEnd_toEndOf="@id/current_password_edit_text"
                    app:layout_constraintStart_toStartOf="@id/current_password_edit_text"
                    app:layout_constraintTop_toBottomOf="@id/current_password_edit_text"
                    app:title="@string/new_password"
                    app:titleSize="16sp" />

                <com.jjbaksa.jjbaksa.view.JjEditText
                    android:id="@+id/check_new_password_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    app:has_title="true"
                    app:hint="@string/input_new_password"
                    app:hintColor="@color/color_c4c4c4"
                    app:hintSize="14sp"
                    app:is_password="true"
                    app:layout_constraintEnd_toEndOf="@id/current_password_edit_text"
                    app:layout_constraintStart_toStartOf="@id/current_password_edit_text"
                    app:layout_constraintTop_toBottomOf="@id/new_password_edit_text"
                    app:title="@string/check_new_password"
                    app:titleSize="16sp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/change_password_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="165dp"
                    android:background="@drawable/selector_rect_radius_100_c4c4c4_ff7f23"
                    android:enabled="false"
                    android:text="@string/change_password_content"
                    android:textColor="@color/color_ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/current_password_edit_text"
                    app:layout_constraintStart_toStartOf="@id/current_password_edit_text"
                    app:layout_constraintTop_toBottomOf="@id/check_new_password_edit_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
