<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jjbaksa.jjbaksa.view.JjAppbar
            android:id="@+id/jj_app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleSize="18sp"
            app:titleTextColor="@color/color_000000" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/jj_app_bar_container"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_find_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:text="@string/input_account_and_email_when_find_password"
                    android:textColor="@color/color_222222"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.jjbaksa.jjbaksa.view.JjEditText
                    android:id="@+id/input_id_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="87dp"
                    app:hint="@string/input_account"
                    app:hintColor="@color/color_c4c4c4"
                    app:hintSize="14sp"
                    app:title="@string/id"
                    app:titleSize="16sp"
                    app:has_title="true"
                    app:layout_constraintEnd_toEndOf="@+id/text_view_find_password_title"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="@+id/text_view_find_password_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_find_password_title"/>

                <com.jjbaksa.jjbaksa.view.JjEditText
                    android:id="@+id/input_email_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:hint="@string/input_email"
                    app:hintColor="@color/color_c4c4c4"
                    app:hintSize="14sp"
                    app:title="@string/email"
                    app:titleSize="16sp"
                    app:has_title="true"
                    app:layout_constraintEnd_toEndOf="@+id/text_view_find_password_title"
                    app:layout_constraintStart_toStartOf="@+id/text_view_find_password_title"
                    app:layout_constraintTop_toBottomOf="@+id/input_id_edit_text"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_find_password_send_to_input_code"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="37dp"
                    android:background="@drawable/selector_rect_radius_100_c4c4c4_ff7f23"
                    android:enabled="false"
                    android:text="@string/send_verification_code"
                    android:textColor="@color/color_ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/input_id_edit_text"
                    app:layout_constraintStart_toStartOf="@+id/input_id_edit_text"
                    app:layout_constraintTop_toBottomOf="@+id/input_email_edit_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
