<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="309dp"
            android:layout_height="180dp"
            android:background="@drawable/shape_rect_ffffff_solid_radius_20"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/success_find_password"
                android:textColor="@color/color_222222"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_re_login_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:gravity="center"
                android:text="@string/re_login_with_new_password"
                android:textColor="@color/color_222222"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_positive"
                android:layout_width="227dp"
                android:layout_height="40dp"
                android:layout_marginTop="31dp"
                android:layout_gravity="center"
                android:background="@drawable/sel_sign_up_button"
                android:text="@string/confirm"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
